--- a/layout02/index.html
+++ b/layout02/index.html
@@ -9,23 +9,30 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/style.css">
-  <title>Document</title>
+  <title>Portfolio Developer</title>
 </head>
 
 <body>
 
-  <header>
+  <header class="header">
     <h1>Your Name</h1>
-
     <ul>
       <li><a href="">About</a></li>
       <li><a href="">Portfolio</a></li>
       <li><a href="">CV</a></li>
       <li><a href="">Blog</a></li>
     </ul>
-
   </header>
 
+  <section class="presentation_cont">
+    <div class="presentation">
+      <h1>Web Designer & Developer</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat maiores deleniti.
+      </p>
+    </div>
+
+    <div></div>
+  </section>
 
 
 
