Call to action adicionado

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -31,7 +31,15 @@
       </p>
     </div>
 
-    <div></div>
+    <div class="call-to-action">
+
+      <ul>
+        <li><a href="">View my Portfolio</a></li>
+        <li><a href="">Read my CV</a></li>
+      </ul>
+
+    </div>
+
   </section>
 
 
