--- a/layout02/index.html
+++ b/layout02/index.html
@@ -42,6 +42,15 @@
 
   </section>
 
+  <section class="skills">
+
+    <div>
+      <h1>Skills</h1>
+      <p><a href="">Check out my full CV ></a></p>
+    </div>
+
+  </section>
+
 
 
 </body>
