Adicionando nova section

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -35,7 +35,7 @@
 
       <ul>
         <li><a href="">View my Portfolio</a></li>
-        <li><a href="">Read my CV</a></li>
+        <li class="btn2"><a href="">Read my CV</a></li>
       </ul>
 
     </div>
@@ -44,11 +44,15 @@
 
   <section class="skills">
 
-    <div>
+    <div class="box-skills">
       <h1>Skills</h1>
       <p><a href="">Check out my full CV ></a></p>
     </div>
-
+    <div class="container">
+      <div class="box01"></div>
+      <div class="box02"></div>
+      <div class="box03"></div>
+    </div>
   </section>
 
 
