Cards adicionados a skills

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -53,6 +53,12 @@
       <div class="box02"></div>
       <div class="box03"></div>
     </div>
+
+    <div class="container">
+      <div class="box01"></div>
+      <div class="box02"></div>
+      <div class="box03"></div>
+    </div>
   </section>
 
 
