Estilos dos cards

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -49,15 +49,39 @@
       <p><a href="">Check out my full CV ></a></p>
     </div>
     <div class="container">
-      <div class="box01"></div>
-      <div class="box02"></div>
-      <div class="box03"></div>
+      <div class="box01 typography">
+        <div class="box_shadow">
+          <h2>Typography</h2>
+        </div>
+      </div>
+      <div class="box02 responsive">
+        <div class="box_shadow">
+          <h2>Responsive</h2>
+        </div>
+      </div>
+      <div class="box03 ux-design">
+        <div class="box_shadow">
+          <h2>UX Design</h2>
+        </div>
+      </div>
     </div>
 
     <div class="container">
-      <div class="box01"></div>
-      <div class="box02"></div>
-      <div class="box03"></div>
+      <div class="box01 interaction">
+        <div class="box_shadow ">
+          <h2>Interaction Design</h2>
+        </div>
+      </div>
+      <div class="box02 front">
+        <div class="box_shadow">
+          <h2>Front-end Development</h2>
+        </div>
+      </div>
+      <div class="box03 wordpress">
+        <div class="box_shadow">
+          <h2>Wordpress</h2>
+        </div>
+      </div>
     </div>
   </section>
 
