mais estilos cards

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -52,16 +52,19 @@
       <div class="box01 typography">
         <div class="box_shadow">
           <h2>Typography</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box02 responsive">
         <div class="box_shadow">
           <h2>Responsive</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box03 ux-design">
         <div class="box_shadow">
           <h2>UX Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
     </div>
@@ -70,16 +73,19 @@
       <div class="box01 interaction">
         <div class="box_shadow ">
           <h2>Interaction Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box02 front">
         <div class="box_shadow">
           <h2>Front-end Development</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box03 wordpress">
         <div class="box_shadow">
           <h2>Wordpress</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
     </div>
