--- a/layout02/index.html
+++ b/layout02/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="style/style.css">
   <title>Portfolio Developer</title>
 </head>
@@ -50,18 +51,21 @@
     </div>
     <div class="container">
       <div class="box01 typography">
+        <h3><i class="fas fa-font"></i></h3>
         <div class="box_shadow">
           <h2>Typography</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box02 responsive">
+        <h3><i class="fas fa-magic"></i></h3>
         <div class="box_shadow">
           <h2>Responsive</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box03 ux-design">
+        <h3><i class="fas fa-paint-brush"></i></h3>
         <div class="box_shadow">
           <h2>UX Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
@@ -71,18 +75,21 @@
 
     <div class="container">
       <div class="box01 interaction">
+        <h3><i class="fas fa-hand-point-up"></i></h3>
         <div class="box_shadow ">
           <h2>Interaction Design</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box02 front">
+        <h3><i class="fas fa-tools"></i></h3>
         <div class="box_shadow">
           <h2>Front-end Development</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
       <div class="box03 wordpress">
+        <h3><i class="fas fa-edit"></i></h3>
         <div class="box_shadow">
           <h2>Wordpress</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
