Recent work adicionado

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -98,6 +98,37 @@
     </div>
   </section>
 
+  <section class="recent-work">
+
+    <div class="box-work">
+      <h1>Recent work</h1>
+      <p><a href="">See more in my Portfolio ></a></p>
+    </div>
+
+    <div class="container">
+      <div class="box01">
+        <h3></h3>
+        <div class="box_shadow">
+          <h2>Typography</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
+        </div>
+      </div>
+      <div class="box02">
+        <h3></h3>
+        <div class="box_shadow">
+          <h2>Responsive</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
+        </div>
+      </div>
+      <div class="box03">
+        <h3></h3>
+        <div class="box_shadow">
+          <h2>UX Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 </body>
