Section work finalizada

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -105,28 +105,32 @@
       <p><a href="">See more in my Portfolio ></a></p>
     </div>
 
-    <div class="container">
-      <div class="box01">
-        <h3></h3>
+    <div class="container work">
+      <div class="box02 work01">
+        <img src="site01.png" alt="">
         <div class="box_shadow">
-          <h2>Typography</h2>
+          <h2><a href="">Your work ></a></h2>
+
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
-      <div class="box02">
-        <h3></h3>
+      <div class="box02 work02">
+        <img src="site01.png" alt="">
         <div class="box_shadow">
-          <h2>Responsive</h2>
+          <h2><a href="">Your work ></a></h2>
+
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
-      <div class="box03">
-        <h3></h3>
+
+      <div class="box03 work3">
+        <img src="site01.png" alt="">
         <div class="box_shadow">
-          <h2>UX Design</h2>
+          <h2><a href="">Your work ></a></h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
+
     </div>
   </section>
 
