imagens adicionadas a work

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -107,7 +107,7 @@
 
     <div class="container work">
       <div class="box02 work01">
-        <img src="site01.png" alt="">
+        <img src="site2.png" alt="">
         <div class="box_shadow">
           <h2><a href="">Your work ></a></h2>
 
@@ -123,8 +123,8 @@
         </div>
       </div>
 
-      <div class="box03 work3">
-        <img src="site01.png" alt="">
+      <div class="box03 work03">
+        <img src="site03.jpg" alt="">
         <div class="box_shadow">
           <h2><a href="">Your work ></a></h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
