Nova section adicionada

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -43,12 +43,15 @@
 
   </section>
 
+  <!--Skills-->
+
   <section class="skills">
 
     <div class="box-skills">
       <h1>Skills</h1>
       <p><a href="">Check out my full CV ></a></p>
     </div>
+
     <div class="container">
       <div class="box01 typography">
         <h3><i class="fas fa-font"></i></h3>
@@ -57,6 +60,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
+
       <div class="box02 responsive">
         <h3><i class="fas fa-magic"></i></h3>
         <div class="box_shadow">
@@ -64,6 +68,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
+
       <div class="box03 ux-design">
         <h3><i class="fas fa-paint-brush"></i></h3>
         <div class="box_shadow">
@@ -81,6 +86,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
+
       <div class="box02 front">
         <h3><i class="fas fa-tools"></i></h3>
         <div class="box_shadow">
@@ -88,6 +94,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
+
       <div class="box03 wordpress">
         <h3><i class="fas fa-edit"></i></h3>
         <div class="box_shadow">
@@ -98,6 +105,8 @@
     </div>
   </section>
 
+  <!--Recent work-->
+
   <section class="recent-work">
 
     <div class="box-work">
@@ -105,12 +114,11 @@
       <p><a href="">See more in my Portfolio ></a></p>
     </div>
 
-    <div class="container work">
+    <div class="container">
       <div class="box02 work01">
         <img src="site2.png" alt="">
         <div class="box_shadow">
           <h2><a href="">Your work ></a></h2>
-
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
@@ -118,7 +126,6 @@
         <img src="site01.png" alt="">
         <div class="box_shadow">
           <h2><a href="">Your work ></a></h2>
-
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
         </div>
       </div>
@@ -132,6 +139,43 @@
       </div>
 
     </div>
+  </section>
+
+
+  <section class="claims">
+
+    <div class="box-claims">
+      <h1>Claims</h1>
+      <p><a href="">Check out my full CV ></a></p>
+    </div>
+
+    <div class="container claims-cards">
+
+      <div class="box01 her-royal">
+        <h3></h3>
+        <div class="box_shadow ">
+          <h2><a href="">Her Royal Highness ></a></h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
+        </div>
+      </div>
+
+      <div class="box02">
+        <h3></h3>
+        <div class="box_shadow">
+          <h2><a href="">Typecast competition ></a></h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
+        </div>
+      </div>
+
+      <div class="box03">
+        <h3></h3>
+        <div class="box_shadow">
+          <h2><a href=""> Responsive newsletter ></a></h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
+        </div>
+      </div>
+    </div>
+
   </section>
 
 
