--- a/layout02/index.html
+++ b/layout02/index.html
@@ -151,8 +151,8 @@
 
     <div class="container claims-cards">
 
-      <div class="box01 her-royal">
-        <h3></h3>
+      <div class="box01">
+        <h3><i class="fas fa-crown"></i></h3>
         <div class="box_shadow ">
           <h2><a href="">Her Royal Highness ></a></h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
@@ -160,7 +160,7 @@
       </div>
 
       <div class="box02">
-        <h3></h3>
+        <h3><i class="fas fa-trophy"></i></h3>
         <div class="box_shadow">
           <h2><a href="">Typecast competition ></a></h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
@@ -168,7 +168,7 @@
       </div>
 
       <div class="box03">
-        <h3></h3>
+        <h3><i class="fas fa-envelope-open-text"></i></h3>
         <div class="box_shadow">
           <h2><a href=""> Responsive newsletter ></a></h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio ex atque quibusdam inventore, repudiandae incidunt perspiciatis, magni voluptas officiis, tenetur facere eum dicta aperiam fuga! Pariatur.</p>
