Icones e correcoes na section Claims to fame

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -145,7 +145,7 @@
   <section class="claims">
 
     <div class="box-claims">
-      <h1>Claims</h1>
+      <h1>Claims to fame</h1>
       <p><a href="">Check out my full CV ></a></p>
     </div>
 
