--- a/layout02/index.html
+++ b/layout02/index.html
@@ -146,7 +146,7 @@
 
     <div class="box-claims">
       <h1>Claims to fame</h1>
-      <p><a href="">Check out my full CV ></a></p>
+      <p><a href="">Find out some more about me ></a></p>
     </div>
 
     <div class="container claims-cards">
