Mais estilos adicionados

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -178,6 +178,21 @@
 
   </section>
 
+  <section class="about">
+
+    <div class="me">
+      <div><img src="me.jfif" alt=""></div>
+      <div class="about-me">
+        <h2>About me</h2>
+        <p>I'm Fulano, a 29 year old from</p>
+        <p>your address</p>
+        <p>about you, Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
+    </div>
+
+  </section>
+
 
 </body>
 
