Inicio lista stalk me

--- a/layout02/index.html
+++ b/layout02/index.html
@@ -188,6 +188,18 @@
         <p>your address</p>
         <p>about you, Lorem ipsum dolor sit amet.</p>
       </div>
+
+      <div class="stalk-me">
+        <h2>Stalk me</h2>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
     </div>
     </div>
 
