--- a/layout02/index.html
+++ b/layout02/index.html
@@ -192,17 +192,20 @@
       <div class="stalk-me">
         <h2>Stalk me</h2>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><a href="https://twitter.com/login?lang=pt"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://pt-br.facebook.com/"><i class="fab fa-facebook-square"></i></a></li>
+          <li><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.tumblr.com/login?language=pt_BR"><i class="fab fa-tumblr"></i></a></li>
+          <li><a href="https://www.skype.com/pt-br/"><i class="fab fa-skype"></i></a></li>
+          <li><a href="https://web.telegram.org/z/"><i class="fab fa-telegram-plane"></i></a></li>
         </ul>
+      </div>
+
+      <div class="btn">
+        <a href="">Email Me</a>
       </div>
     </div>
     </div>
-
   </section>
 
 
