--- a/layout02/index.html
+++ b/layout02/index.html
@@ -204,6 +204,10 @@
       <div class="btn">
         <a href="">Email Me</a>
       </div>
+
+      <footer>
+        <h4>&#169;2021 Your Name. Some rights reserved</h4>
+      </footer>
     </div>
     </div>
   </section>
