--- a/layout01/index.html
+++ b/layout01/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
 
-    <div class="box-1">
+    <div class="box-kentucky">
       <img src="img/quarto01.webp" alt="Quarto01">
 
       <div class="box-info">
