--- a/layout01/index.html
+++ b/layout01/index.html
@@ -21,9 +21,11 @@
 
       <div class="box-info">
         <div class="preco">
-          <h2>$345,100</h2>
+          <span>
+            $345,100
+          </span>
         </div>
-        <div class="status-1">
+        <div class="status-kentucky">
           <h2>For sale</h2>
         </div>
       </div>
@@ -56,14 +58,14 @@
       </footer>
     </div>
 
-    <div class="box-2">
+    <div class="box-alaska">
       <img src="img/quarto02.jpg" alt="Quarto02">
 
       <div class="box-info">
         <div class="preco">
-          <h2>$540,200</h2>
+          <span> $540,200</span>
         </div>
-        <div class="status-2">
+        <div class="status-alaska">
           <h2>Sale Pending</h2>
         </div>
       </div>
