--- a/Layout03/index.html
+++ b/Layout03/index.html
@@ -5,10 +5,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style/style.css">
+  <title>PicPay - Fake</title>
 </head>
 
 <body>
+
+  <header class="menu-bg">
+
+    <div class="menu-logo">
+      <img src="img/download.svg" alt="">
+    </div>
+    <nav class="menu">
+      <ul>
+        <li>Para você</li>
+        <li>Para seu negócio</li>
+        <li>Central de Ajuda</li>
+        <li>Sobre o PicPay</li>
+        <li>Blog</li>
+        <li>Show do milhão</li>
+      </ul>
+      <div class="btn-download">
+        Baixe o app
+      </div>
+
+    </nav>
+  </header>
 
 </body>
 
